[package]
edition = "2021"
name = "three_delaunay"
version = "0.1.0"

[dependencies]
glam = {version = "0.28.0", default-features = false, features = ["libm"]}
itertools = "0.13.0"
rstar = "0.12.0"
thiserror = "1.0.63"
[dev-dependencies]
glam = {version = "0.28.0", features = ["rand"]}
rand = "0.8.5"
rand_distr = "0.4.3"
