[package]
edition = "2021"
name = "three_delaunay"
version = "0.1.0"

[dependencies]
glam = {version = "0.28", default-features = false, features = ["libm"]}
itertools = "0.13"
rstar = "0.12"
thiserror = "1.0"
[dev-dependencies]
glam = {version = "0.28", features = ["rand"]}
rand = "0.8"
rand_distr = "0.4"
